--- a/formats.html
+++ b/formats.html
@@ -665,65 +665,153 @@
             </article>
 
             <!-- Big Fish Challenge -->
-            <article class="accordion-item">
-                <button class="accordion-header">
-                    Big Fish Challenge — 30 великих
-                    <span class="accordion-indicator">Призовий фонд</span>
-                </button>
-                <div class="accordion-content">
-                    <div class="accordion-content-inner">
-                        <div class="format-card">
-                            <h2 class="format-title">Big Fish Challenge — TOP-30</h2>
-                            <p class="format-description">
-                                Змагання, орієнтоване на пошук трофейних екземплярів з масштабним призовим фондом.
-                            </p>
-                            
-                            <div class="format-section">
-                                <h3 class="section-title">Суть</h3>
-                                <p>Три зони (A, B, C). У кожній зоні визначаються ТОП-10 найбільших риб, що разом утворюють загальний фонд з 30 трофеїв.</p>
-                                <p>Окремо нагороджуються призи за загальною вагою: 1-2-3 місце в кожній зоні.</p>
-                            </div>
+<article class="accordion-item">
+    <button class="accordion-header">
+        Big Fish Challenge — 30 великих
+        <span class="accordion-indicator">TOP-30</span>
+    </button>
 
-                            <div class="format-section">
-                                <h3 class="section-title">Призовий фонд</h3>
-                                <ul class="format-list">
-                                    <li><strong>30 риб × 3 000 грн = 90 000 грн</strong> — за кожну рибу у ТОП-30</li>
-                                    <li><strong>Зональні призи за вагою</strong> — 1-2-3 місця в зонах A, B, C</li>
-                                    <li><strong>Внесок:</strong> 7 000 грн з команди</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+    <div class="accordion-content">
+        <div class="accordion-content-inner">
+
+            <div class="format-card">
+                <h2 class="format-title">Big Fish Challenge — TOP-30</h2>
+                <p class="format-description">
+                    Формат повністю орієнтований на трофейну риболовлю, де у залік йдуть тільки найбільші риби з трьох зон.
+                </p>
+
+                <!-- Суть -->
+                <div class="format-section">
+                    <h3 class="section-title">Суть формату</h3>
+                    <p>Змагання поділене на три зони: <strong>A, B, C</strong>.</p>
+                    <p>У кожній зоні визначаються <strong>ТОП-10 найбільших риб</strong>. Разом це формує <strong>30 найбільших трофеїв</strong>, які отримують фінансові призи.</p>
+                    <p>Окремо визначаються призери за <strong>загальною вагою</strong> у кожній зоні.</p>
                 </div>
-            </article>
+
+                <!-- Параметри -->
+                <div class="format-section">
+                    <h3 class="section-title">Параметри турніру</h3>
+                    <ul>
+                        <li><strong>Тривалість:</strong> 48 годин</li>
+                        <li><strong>Мінімальна кількість учасників:</strong> 21 команда</li>
+                        <li><strong>Внесок:</strong> 7 000 грн з команди</li>
+                    </ul>
+                </div>
+
+                <!-- Призовий фонд -->
+                <div class="format-section">
+                    <h3 class="section-title">Призовий фонд</h3>
+                    <ul class="format-list">
+                        <li><strong>30 риб × 3 000 грн = 90 000 грн</strong> — за кожну рибу, що увійшла у TOP-30</li>
+                    </ul>
+                </div>
+
+                <!-- Зональні призи -->
+                <div class="format-section">
+                    <h3 class="section-title">Зональні призи за загальною вагою</h3>
+
+                    <p>У кожній зоні визначаються три найкращі команди:</p>
+
+                    <h4>Зона A</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+
+                    <h4>Зона B</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+
+                    <h4>Зона C</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</article>
 
             <!-- Осінній Короп -->
-            <article class="accordion-item">
-                <button class="accordion-header">
-                    Осінній Короп
-                    <span class="accordion-indicator">Класика</span>
-                </button>
-                <div class="accordion-content">
-                    <div class="accordion-content-inner">
-                        <div class="format-card">
-                            <h2 class="format-title">Осінній Короп</h2>
-                            
-                            <div class="format-section">
-                                <h3 class="section-title">Формат</h3>
-                                <p>Класичний командний формат: переможець визначається за найбільшою загальною вагою упійманих риб.</p>
-                            </div>
+<article class="accordion-item">
+    <button class="accordion-header">
+        Осінній Короп
+        <span class="accordion-indicator">Класика</span>
+    </button>
 
-                            <div class="format-section">
-                                <h3 class="section-title">Додаткові заліки</h3>
-                                <ul class="format-list">
-                                    <li><strong>Big Fish</strong> — приз за найбільшу рибу турніру</li>
-                                    <li><strong>TOP-5 риб</strong> — окремий залік за сумою ваги п'яти найбільших екземплярів</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+    <div class="accordion-content">
+        <div class="accordion-content-inner">
+            <div class="format-card">
+                <h2 class="format-title">Осінній Короп</h2>
+
+                <!-- Формат -->
+                <div class="format-section">
+                    <h3 class="section-title">Формат</h3>
+                    <p>
+                        Класичний командний формат: переможець визначається за 
+                        <strong>найбільшою загальною вагою улову</strong>.
+                    </p>
                 </div>
-            </article>
+
+                <!-- Параметри турніру -->
+                <div class="format-section">
+                    <h3 class="section-title">Параметри турніру</h3>
+                    <ul>
+                        <li><strong>Тривалість:</strong> 48 годин</li>
+                        <li><strong>Кількість команд:</strong> 21</li>
+                        <li><strong>Кількість зон:</strong> 3 (A, B, C)</li>
+                        <li><strong>Внесок:</strong> 4000 грн / команда</li>
+                    </ul>
+                </div>
+
+                <!-- Додаткові заліки -->
+                <div class="format-section">
+                    <h3 class="section-title">Додаткові заліки</h3>
+                    <ul class="format-list">
+                        <li><strong>Big Fish</strong> — приз за найбільшу рибу турніру</li>
+                        <li><strong>TOP-5 риб</strong> — залік за сумою ваги 5 найбільших екземплярів</li>
+                    </ul>
+                </div>
+
+                <!-- Зональні призи -->
+                <div class="format-section">
+                    <h3 class="section-title">Зональні призи</h3>
+                    <p>У кожній зоні визначаються три найкращі команди:</p>
+
+                    <h4>Зона A</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+
+                    <h4>Зона B</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+
+                    <h4>Зона C</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</article>
 
             <!-- Трофейні 15 · Cobra -->
 <article class="accordion-item">
