--- a/formats.html
+++ b/formats.html
@@ -693,12 +693,12 @@
                     <h3 class="section-title">Параметри турніру</h3>
                     <ul>
                         <li><strong>Тривалість:</strong> 48 годин</li>
-                        <li><strong>Мінімальна кількість учасників:</strong> 21 команда</li>
+                        <li><strong>Кількість учасників:</strong> 21 команда</li>
                         <li><strong>Внесок:</strong> 7 000 грн з команди</li>
                     </ul>
                 </div>
 
-                <!-- Призовий фонд -->
+                <!-- Призовий фонд при 21 команді-->
                 <div class="format-section">
                     <h3 class="section-title">Призовий фонд</h3>
                     <ul class="format-list">
