--- a/sponsors.html
+++ b/sponsors.html
@@ -263,7 +263,7 @@
 
     <!-- HERO -->
     <div class="sponsors-hero">
-      <di<div data-include-html="partials/header.html"></div>v class="sponsors-kicker">
+      <di<div data-include-html="partials/header.html"></div>
         ПАРТНЕРИ ТА СПОНСОРИ ТУРНІРУ
       </div>
       <h1 class="page-title title-gradient">
