--- a/admin.html
+++ b/admin.html
@@ -64,6 +64,90 @@
       background:linear-gradient(135deg,var(--accent),var(--accent-2));
       color:#000;border-color:transparent;
     }
+    .login-title{ font-size:1.6rem; font-weight:900; letter-spacing:.04em; margin:6px 0 6px; }
+    .login-sub{ color:#9ca3af; margin-bottom:14px; }
+    .field{ display:grid; gap:6px; margin-bottom:12px; }
+    .field label{ font-size:.9rem; color:#cbd5e1; }
+    .field input{
+      width:100%;
+      padding:12px 14px;
+      border-radius:14px;
+      border:1px solid rgba(148,163,184,.25);
+      background:rgba(2,6,23,.45);
+      color:#e5e7eb;
+      outline:none;
+    }
+    .field input:focus{
+      border-color:var(--accent);
+      box-shadow:0 0 10px rgba(246,195,76,.25);
+    }
+    .login-actions{ display:flex; gap:10px; flex-wrap:wrap; margin-top:10px; }
+    .login-actions .btn{ border-radius:14px; padding:12px 14px; }
+
+    /* нижче лишаю як було в тебе, щоб нічого не “посипалось” */
+    .mini-form{
+      margin-top:12px;
+      display:grid;
+      grid-template-columns:1fr;
+      gap:10px;
+    }
+    .mini-form input, .mini-form select{
+      width:100%;
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(2,6,23,.55);
+      color:#e5e7eb;
+      outline:none;
+    }
+    .mini-form input::placeholder{ color:#6b7280; }
+
+    .grid2{ display:grid; grid-template-columns:1fr 1fr; gap:10px; }
+    @media (max-width:640px){ .grid2{ grid-template-columns:1fr; } }
+
+    .win-card{
+      padding:12px;
+      border-radius:14px;
+      border:1px solid rgba(148,163,184,.25);
+      background:rgba(2,6,23,.35);
+      margin-top:10px;
+    }
+    .win-title{
+      font-weight:900;
+      letter-spacing:.06em;
+      text-transform:uppercase;
+      font-size:.85rem;
+      margin-bottom:8px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:8px;
+    }
+    .badge{
+      font-size:.72rem;
+      padding:5px 10px;
+      border-radius:999px;
+      border:1px solid rgba(148,163,184,.25);
+      background:rgba(2,6,23,.45);
+      color:#e5e7eb;
+      white-space:nowrap;
+    }
+    .badge--final{
+      background:linear-gradient(135deg,#f6c34c,#d6a23a,#7a0f2b);
+      border-color:transparent;
+      color:#000;
+      font-weight:900;
+    }
+
+    .ok{ color:#22c55e; }
+    .err{ color:#ef4444; }
+
+    .note{
+      font-size:.82rem;
+      color:#9ca3af;
+      line-height:1.35;
+    }
+    .note b{ color:#e5e7eb; }
   </style>
 </head>
 
@@ -92,20 +176,24 @@
       <div class="muted" id="adminDebug" style="margin-top:6px;"></div>
     </div>
 
+    <!-- LOGIN -->
     <div id="adminLogin" class="admin-card hidden">
       <div class="login-card">
         <div class="login-tabs">
           <div class="pill pill--active">Вхід</div>
         </div>
 
+        <div class="login-title">Вхід адміністратора</div>
+        <div class="login-sub">Вхід тільки для адміністратора (email/пароль).</div>
+
         <div class="field">
           <label for="admEmail">Email</label>
-          <input id="admEmail" type="email" placeholder="Email адміністратора">
+          <input id="admEmail" type="email" placeholder="Email адміністратора" autocomplete="username">
         </div>
 
         <div class="field">
           <label for="admPass">Пароль</label>
-          <input id="admPass" type="password" placeholder="Пароль адміністратора">
+          <input id="admPass" type="password" placeholder="Пароль адміністратора" autocomplete="current-password">
         </div>
 
         <div class="login-actions">
@@ -116,39 +204,38 @@
       </div>
     </div>
 
+    <!-- APP -->
     <div id="adminApp" class="hidden">
-
       <div class="admin-card">
         <div class="stack">
+          <!-- ЗМІНА ПО ТЕМІ: перехід на admin-create -->
+          <a class="btn btn--primary" href="admin-create.html">1) Створити змагання</a>
 
-          <!-- 🔥 ЄДИНА ЗМІНА -->
-          <a class="btn btn--primary" href="admin-create.html">
-            1) Створити змагання
-          </a>
-
-          <button class="btn btn--accent" id="btnOpenEdit">
-            2) Редагувати змагання
-          </button>
+          <!-- ЗМІНА ПО ТЕМІ: редагування теж веде на admin-create -->
+          <a class="btn btn--accent" href="admin-create.html?mode=edit">2) Редагувати змагання</a>
 
           <a class="btn btn--primary" href="admin-registrations.html">3) Реєстрація команд</a>
           <a class="btn btn--accent"  href="admin-draw.html">4) Жеребкування</a>
           <a class="btn btn--danger"  href="admin-weigh.html">5) Зважування (адмін)</a>
           <a class="btn btn--primary" href="admin-accounts.html">6) Акаунт STOLAR CARP</a>
           <a class="btn btn--accent" href="judge_qr_admin.html">📱 QR-доступ для суддів</a>
-
         </div>
       </div>
-
     </div>
+
   </section>
 </main>
 
+<!-- Firebase compat SDK -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
+<!-- init -->
 <script src="assets/js/firebase-init.js"></script>
-<script src="assets/js/admin.js"></script>
+
+<!-- IMPORTANT: кеш-байпас -->
+<script src="assets/js/admin.js?v=20260212"></script>
 
 </body>
 </html>
